# pandoc-include

./: .envrc  .gitignore  .versionrc  .versionrc.cjs  CHANGELOG.md  LICENSE  README.md  cliff.toml  flake.nix  pandoc_include.py  pyproject.toml  requirements.txt  setup.py  version-updater.js
.github/workflows/: release.yml
pandoc-include/: __init__.py  format_heuristics.py
pandoc_include/: CHANGELOG.md  config.py  format_heuristics.py  main.py  utils.py
src/: pandoc_include.py
test/: 1.cpp  Makefile  debug.md  included-1.md  included-r1.md  run.py  test.md
test/entryTest/: test-out.md  test.md
test/entryTest/subincluded/: img.md  included 2.tex  included-r1.md
test/included/: 1.tex  header.yaml  image.rst  img.md  included-1.md  included-header.md  included-r2.md  included-r2.tex  log
test/xsl/doc/xml/: main_8c.xml
test/xslt/: Doxyfile  api.xslt  main.c
test/xslt/doc/xml/: index.xml
